started working on heroimage section (header) for homepage

--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_navigation.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_navigation.scss
@@ -46,7 +46,7 @@
   width: 100%;
   z-index: 99;
   background: #979797;
-  //background-color: transparent;
+  background-color: transparent;
 
   &__title {
     font-size: 25px;
@@ -109,4 +109,3 @@
     }
   }
 }
-
