--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
@@ -66,4 +66,5 @@ CSS file.
 
 // Import your custom styles
 @import "global";
-@import "custom";
+@import "components/navigation";
+@import "components/heroimage";
