--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
@@ -48,7 +48,7 @@ CSS file.
 @include foundation-label;
 @include foundation-media-object;
 @include foundation-off-canvas;
-//@include foundation-orbit;
+@include foundation-orbit;
 @include foundation-pagination;
 @include foundation-progress-bar;
 @include foundation-slider;
@@ -58,8 +58,8 @@ CSS file.
 @include foundation-table;
 @include foundation-tabs;
 @include foundation-thumbnail;
-//@include foundation-title-bar;
-//@include foundation-tooltip;
+@include foundation-title-bar;
+@include foundation-tooltip;
 @include foundation-top-bar;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
@@ -69,3 +69,4 @@ CSS file.
 @import "components/globalcustom";
 @import "components/navigation";
 @import "components/heroimage";
+@import "components/homepage";
