--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_globalcustom.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_globalcustom.scss
@@ -22,13 +22,22 @@
     }
   }
   
-  .logged-in .site-header {
-    margin-top: 32px;
-  }
-
-
-
-
+.backgroundimage {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 100%;
+    min-height: 640px;
+}
 
 
   /**** GLOBAL CUSTOM BTF ****/
+
+.logged-in .site-header {
+    margin-top: 32px;
+}
+
+  .gradient {
+    background: rgb(234,171,43);
+    background: linear-gradient(90deg, rgba(234,171,43,0) 0%, rgba(255,202,95,0.07) 100%);
+}
