For bedrifter - two blocks done

--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_heroimage.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_heroimage.scss
@@ -61,7 +61,7 @@
         background: rgb(34,38,51);
         background: linear-gradient(180deg, rgba(34,38,51,1) 0%, rgba(42,49,73,1) 50%, rgba(39,44,60,1) 100%);
         min-height: 340px;
-        padding: 5rem 0; 
+        padding: 5rem 0 4rem 0;
         /*display: flex;
         flex-flow: column nowrap;
         justify-content: center;
