--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
@@ -73,4 +73,5 @@ CSS file.
 @import "components/twocolumnsblock";
 @import "components/fagomraader";
 @import "components/cta";
-@import "components/footer"
+@import "components/footer";
+@import "components/hvatilbyrpromo";
