--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
@@ -75,3 +75,6 @@ CSS file.
 @import "components/cta";
 @import "components/footer";
 @import "components/hvatilbyrpromo";
+@import "components/block5050";
+@import "components/textblock";
+@import "components/form";
