--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_navigation.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_navigation.scss
@@ -36,8 +36,12 @@
   }
   &__cta {
     font-weight: $global-weight-bold;
-    //border-radius: 4px;
-
+    &--mobile {
+      
+    }
+  }
+  .top-bar, .top-bar ul {
+    background-color: transparent;
   }
 }
 
@@ -75,17 +79,11 @@
         color: $primary-yellow;
       }
     }
-    @include breakpoint(large down) {
-      display: block;
-    }
   }
   &__mobile {
     display: none;
     width: 50px;
     height: 50px;
-    &--open {
-      display: block;
-    }
   }
 }
 
