--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
@@ -79,3 +79,4 @@ CSS file.
 @import "components/textblock";
 @import "components/form";
 @import "components/homepage";
+@import "components/steps";
