--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
@@ -82,3 +82,4 @@ CSS file.
 @import "components/steps";
 @import "components/maps";
 @import "components/kontakt";
+@import "components/testimonials";
