--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_testimonials.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_testimonials.scss
@@ -1,6 +1,7 @@
 /* Testimonials */
 .testimonials {
     position: inherit;
+    padding-bottom: 5rem;
     &__wrapper {
         position: relative;
     }
