--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/style.scss
@@ -78,7 +78,7 @@ CSS file.
 @import "components/block5050";
 @import "components/textblock";
 @import "components/form";
-@import "components/homepage";
+@import "components/block2column";
 @import "components/steps";
 @import "components/maps";
 @import "components/kontakt";
