--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_form.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_form.scss
@@ -34,15 +34,40 @@
         .codedropz-upload-inner {
             h3 {
                 font-size: 1.2rem;
+                line-height: 2.4rem;
+                position: relative;
+                padding-top: 2rem;
+                &::before {
+                    content: url('/wp-content/uploads/2021/11/Group-3667.png');
+                    display: block;
+                    background-color: transparent;
+                    width: 100%;
+                    height: 100%;
+                    z-index: -1;
+                }
                 @include breakpoint(large up) {
                     font-size: 1.6rem;
                 }
             }
             .cd-upload-btn {
                 font-size: 1.1rem;
+                color: $black;
+                position: relative;
+                &:before {
+                    content: "";
+                    position: absolute;
+                    display: block;
+                    background-color: rgba(237, 167, 24, 0.5);
+                    width: 100%;
+                    height: 12px;
+                    left: 0;
+                    bottom: -4px;
+                    z-index: 0;
+                }
                 @include breakpoint(large up) {
                     font-size: 1.4rem;
                 }
+
             }
         }
         .dnd-upload-status .dnd-upload-details .name {
