fixed main nav (mobile/desktop)

--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/_abovethefold.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/_abovethefold.scss
@@ -1,1 +1,11 @@
 /***** ABOVE THE FOLD ******/
+.page-template-template-homepage {
+    .main {
+        margin-top: -80px;
+    }
+    .menu.vertical {
+        @include breakpoint(large up) {
+            background: transparent;  
+        }
+    }
+}
