--- a/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_form.scss
+++ b/app/public/wp-content/themes/JointsWP/assets/styles/scss/components/_form.scss
@@ -86,6 +86,10 @@
         padding: 4rem 0;
     }
     .form__header {
-        font-size: 1.5rem;
+        font-size: 1rem;
+        line-height: 1.5;
+        @include breakpoint(large up) {
+            font-size: 1.5rem;
+        }
     }
 }
